Fixed horizontal scrollbar

--- a/src/styling/login.css
+++ b/src/styling/login.css
@@ -2,6 +2,7 @@
 
 body {
     background-color: #343333;
+    overflow-x: hidden ;
     color: white;
 }
 
@@ -23,7 +24,7 @@ body {
 #login{
     position: relative;
     text-align: center;
-    left: 25%;
+    left: 17%;
 
     font-family: 'Rosarivo', serif;
     font-style: normal;
@@ -35,7 +36,7 @@ body {
 #email {
     position: relative;
     text-align: center;
-    left: 10%;
+    left: 10.5%;
     top: 80px;
 
     font-family: 'Rosarivo', serif;
@@ -48,8 +49,8 @@ body {
 #password {
     position: relative;
     text-align: center;
-    left: 10.5%;
-    top: 180px;
+    left: 11.5%;
+    top: 95px;
 
     font-family: 'Rosarivo', serif;
     font-style: normal;
@@ -69,8 +70,8 @@ body {
 #passwordInput {
     position: relative;
 
-    top: 170px;
-    left: 51.8%;
+    top: 80px;
+    left: 42%;
 
 
 }
